--- a/Figures_Tables/Supplementary/TableE1.ipynb
+++ b/Figures_Tables/Supplementary/TableE1.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table E1 \n",
+    "## Pearson’s Correlation coefficients for IEAs in 5-fold cross-validation (CV). Stability of IEAs within each fold of CV was assessed by calculating Pearson’s correlation between IEAs identified in each CV fold. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -283,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -297,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
