--- a/Figures_Tables/main_text/Table5.ipynb
+++ b/Figures_Tables/main_text/Table5.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Table 5 \n",
+    "## Characteristics of subgroups defined by diving the Image-Expression Axes (IEAs) into quadrants. Low and high indicates whether the corresponding IEA is less than or greater than zero, respectively. Continuous variables are expressed as means and standard deviations. Categorical variables are expressed as percentages. P-values are obtained using the Analysis of Variance (ANOVA) for the continuous variables and chi-square test for the proportions. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -308,7 +316,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +330,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
